more strategy headline variation; more vocab

--- a/src/data/grammar/curatedHeadline.yaml
+++ b/src/data/grammar/curatedHeadline.yaml
@@ -75,6 +75,7 @@ randomTextHeadline:
 smallImageHeadline1:
 - "#cardCallout#"
 - "#mtgoTwitterStyleHeadline#"
+- "#graphicAnnouncement#"
 
 smallImageHeadline2:
 - "#cardCallout#"
