--- a/src/data/grammar/headlines/components/terminating-wordlists.yaml
+++ b/src/data/grammar/headlines/components/terminating-wordlists.yaml
@@ -1,5 +1,5 @@
 {
-  "planNoun": ["plan", "scheme", "strategy", "objective", "stratagem", "tactic"],
+  "planNoun": ["plan", "scheme", "strategy", "objective", "tactic", "gambit", "game plan"],
   "winWord": [
       "wins","triumphs","victorious","crushes","dominates","wins big"
   ],
