--- a/src/data/grammar/mtg/gameplay/mtg-decks.yaml
+++ b/src/data/grammar/mtg/gameplay/mtg-decks.yaml
@@ -2,7 +2,7 @@
   "deckArch": [
       "#deck#",
       "#deckVariation#",
-      "#creatureTypes.capitalize# Tribal",
+      "[_tribal:#creatureTypes.capitalize# Tribal,#creatureTypes.capitalize.s#]#_tribal#",
       "[_format:#format#]#_format# #creatureTypesPlural.capitalize#",
       "[_format:#format#]#_format# #deck#",
       "[_format:#format#]#_format# #deckVariation#",
@@ -13,7 +13,7 @@
       "#deck#",
       "#deckVariation#",
       "decks with #randomCardAlone#",
-      "#creatureTypes.capitalize# Tribal",
+      "[_tribal:#creatureTypes.capitalize# Tribal,#creatureTypes.capitalize.s#]#_tribal#",
       "[_format:#format#]#_format# #creatureTypesPlural.capitalize#",
       "[_format:#format#]#_format# #deck#",
       "[_format:#format#]#_format# #deckVariation#",
@@ -30,6 +30,7 @@
       "Combo",
       "Marvel",
       "Energy",
+      "Vehicles",
       "Miracles",
       "Goblins",
       "Elves",
