--- a/src/data/grammar/headlines/mtg-magic-online-headline.yaml
+++ b/src/data/grammar/headlines/mtg-magic-online-headline.yaml
@@ -102,16 +102,16 @@ onlineEvent:
 - "[_aThe:a][_isAre:are][_s:s]#alternativeConstructedFormat# online [_event:league, premiere event]#_event#"
 
 eventComeOn:
-# - Don't miss it
-# - Be there or be square
-# - Registration is limited
-# - Sign up now
-# - Don't forget
-# - We're serious this time
-# - "[_amount:Most,Many,Some,A few]#_amount# of the cards [_cardClaim:have even been tested,are working correctly,"
-# - "Prepare to be #verbTransitivePastTense#"
-# - "[_cardType:creature][#_cardType.cardSearchByType(1)#]All participants receive a free #_cardName1# avatar"
-- "[_query:name!=\"? \"][#_query.cardSearchCustomQuery(1)#]The first #num2-9##num1-99# players to type [_code:caw,#planeswalkerFirstName#,#_cardName1#]#_code.allCaps# will [_prize:receive a promo #randomCardAlone#,receive a free treasure chest,receive a free draft set of #randomCardSet#,be entered manually]#_prize#"
+- Don't miss it
+- Be there or be square
+- Registration is limited
+- Sign up now
+- Don't forget
+- We're serious this time
+- "[_amount:Most,Many,Some,A few]#_amount# of the cards [_cardClaim:have even been tested,are working correctly,"
+- "Prepare to be #verbTransitivePastTense#"
+- "[_cardType:creature][#_cardType.cardSearchByType(1)#]All participants receive a free #_cardName1# avatar"
+- "[_query:name!=\"? \"][#_query.cardSearchCustomQuery(1)#][_numTensPlace:,,#num1-9#]The first #_numTensPlace##num2-99# players to type [_code:caw,#planeswalkerFirstName#,#_cardName1#]#_code.allCaps# will [_prize:receive a promo #randomCardAlone#,receive a free treasure chest,receive a free draft set of #randomCardSet.capitalizeAll#,be entered manually]#_prize#"
 
 onlineEventAnnouncement1: "[_starting:starting,beginning,launching]#onlineEvent.capitalize##_s# #_isAre# starting #onlineEventTimeStart#. #eventComeOn#"
 onlineEventAnnouncement2: "[_starting:starting,beginning,launching]join [_event:#onlineEvent#]#_aThe# #_event#, #_starting# #onlineEventTimeStart#"
