--- a/src/data/grammar/mtg/card-related/cardfinder/searchable-card-category.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/searchable-card-category.yaml
@@ -1,7 +1,7 @@
 ---
 searchableCardCategory:
   - >
-    [_cardCategory:removal spell][_cardCategoryClass:removal][_toughness:1,2,3,4,5,X][_cardCategorySearchTerm:"destroy target creature","exile target creature","enchanted creature can't attack","fights target","damage to target creature","sacrifices a creature","/-#_toughness# until","enchanted creature doesn't"]
+    [_cardCategory:removal spell,kill spell][_cardCategoryClass:removal][_toughness:1,2,3,4,5,X][_cardCategorySearchTerm:"destroy target creature","exile target creature","enchanted creature can't attack","fights target","damage to target creature","sacrifices a creature","/-#_toughness# until","enchanted creature doesn't"]
   - >
     [_cardCategory:land destruction spell][_cardCategoryClass:land destruction][_cardCategorySearchTerm:"destroy target land","sacrifices a land"]
   - >
