--- a/src/data/grammar/images/mtg-in-graphics.yaml
+++ b/src/data/grammar/images/mtg-in-graphics.yaml
@@ -1,6 +1,6 @@
 ---
 inGraphics: |
-  [_card1:#randomRealCard#][_card2:#randomRealCard#][_headline:#inGraphicsHeadline#]#inGraphicsText#{svg svgString=`#inGraphicsImage#`}
+  [_card1:#randomRealCard#][_card2:#randomRealCard#][_eitherCard:#_card1#,#_card2#][_headline:#inGraphicsHeadline#]#inGraphicsText#{svg svgString=`#inGraphicsImage#`}
 inGraphicsText:
 - 'IN GRAPHICS: #_headline#'
 - 'Infographic: #_headline#'
@@ -19,52 +19,69 @@ inGraphicsHeadline:
 - "#_card1# goes on the offensive"
 - 'The Hidden Power of #_card1#'
 inGraphicsStep:
-- 'Cast #_card1#'
-- 'Cast #_card2#'
+- 'Cast #_eitherCard#'
 - 'Return #_card1# to your hand with #_card2#'
-- 'During [_whose:your,your opponent''s]#_whose# #gameStep#, use #_card1#'
+- 'During [_whose:your,your opponent''s]#_whose# #gameStep#, use #_eitherCard#'
 - 'At end of turn, use #_card2# on #_card1#'
 - 'Attach #_card2# to #_card1#'
 - 'Protect your #cardCategory.s# with #_card1#'
 - 'Cast #_card2# with #_card1# on the stack'
-- 'Shuffle #_card1# into your library'
-- 'Slam #_card2# onto #_card1# with #emotion#'
+- 'Shuffle #_eitherCard# into your library'
+- '[_action:Slam #_card2# onto #_card1#,Brush #_card2# against #_card1#,Smash #_card2# against #_card1#,Caress #_eitherCard#,Carefully lay #_card2# on top of #_card1#]#_action# with #emotion#'
 - 'Attach both cards to #gameAccessory.a#'
 - 'Place #_card2# into #_card1#''s sleeve'
-- 'Write &quot;#realPowerfulCard#&quot; on #_card2# with a sharpie'
-- 'Transform #_card1# to flip #_card2# to unmorph #_card1#'
+- 'Write [_phrase:#mtgCatchphrase#,#mtgSlangTerm#][_loveHate:love,hate,❤][_text:#realPowerfulCard#,#_phrase#,I #_loveHate# #anyPersonality#]“#_text#” on #_card2# with [_implement:sharpie,crayon,pencil,permanent marker]#_implement.a#'
+- 'Transform #_card1# to flip #_card2# to unmorph #randomPermanentCard#'
 - 'Throw #_card1# across the table while shouting about #gameConcept#'
-- 'Ask a judge how #_card1# and #_card2# interact'
+- 'Ask a judge [_otherThing:#_card2#,#keyword#][_question:how #_card1# and #_otherThing# interact,for the oracle text of #_otherThing#]#_question#'
 - 'Look extremely puzzled for #num2-9# minutes'
-- Gesture to the collection of PTQ Top 8 pins on your playmat
+- "Gesture to the [_what:collection of PTQ Top 8 pins,mustard and ketchup stains,detailed portrait of #anyPersonality#,collection of #creatureTypes# tokens]#_what# on your playmat"
 - 'Reveal the [_card:Cheatyface,Cheatyface,Entirely Normal Armchair]#_card# hidden underneath #_card1#'
 - 'Draw #_card2# and gaze #adverb# at it'
-- 'Tear #_card1# into pieces and eat it'
+- "Tear #_card1# into pieces and [_where:up your nose,into your ears,into your pockets,into your cheeks like a chipmunk,down the front of your pants][_then:eat it,sprinkle them over your opponent's head,cram them #_where#,frantically try to piece them back together]#_then#"
 - Move to the beginning of combat step
-- Ask your opponent, “How many cards in hand?”
-- Tap too much mana
-- "“Accidentally” reveal #_card2# while shuffling"
-- 'Tutor for #_card2#'
-- 'Cast Pithing Needle naming #_card1#'
-- 'Discard #_card2# to Pack Rat'
-- 'Make #count# copies of #_card1#'
-- 'Cast #_card1#, immediately say “Oops”, pick it back up, and cast #_card2#'
-- 'Pitch #_card2# to #verbGerund.capitalizeAll# Shoal'
-- 'Hold #_card2# to your face and pretend to study the rules text'
-- 'Drop #_card1# into your lap'
+- "Ask your opponent [_really:really a,a good,their favorite][_question:“how many cards in hand?”,“mind if I smoke?”,“would you like some #pluralNounOrMassNoun#?”,“got any trades?”,“any fast effects?”,“can I take that back?”,“come here often?”,if #_eitherCard# is #_really# #typeOfCard#,if they think you look like #character#,“just who do you think your are?”,“am I being detained?”,about #massNoun# magic,if it's #occasion#]#_question#"
+- "Tap [_what:too much mana,too little mana,exactly the right amount of mana,#randomNonbasicLandCard#,#count# #basicLands.s#]#_what#"
+- "“Accidentally” reveal #_eitherCard# while shuffling"
+- '[_tutorCard:#adj.capitalizeAll# Tutor,#randomTutorCard#][_tutor:Tutor for #_eitherCard#,Search for #_eitherCard# with #_tutorCard#]#_tutor#'
+- 'Cast [_nameCard:Pithing Needle,Meddling Mage,Demonic Consultation,Predict,Tunnel Vision]#_nameCard# naming #_card1#'
+- 'Discard #_eitherCard# to [_searchString:discard a card][_whatCard:Pack Rat,#randomPermanentWithText#]#_whatCard#'
+- 'Make #count# copies of #_eitherCard# with [_searchString:copy target,copy of target]#randomCardWithText#'
+- "Cast #_card1#, immediately say [_oops:Oops,whoops,whoopsie-daisy!,my bad,I'm such a klutz]“Oops”, pick it back up, and cast #_card2#"
+- 'Pitch #_eitherCard# to #verbGerund.capitalizeAll# Shoal'
+- "Hold #_eitherCard# to your face and [_what:pretend to study the rules text,quietly recite the rules text of #randomNonlandCard#,quietly read its rules text out loud,very slowly sound out each word of rules text]#_what#"
+- 'Drop #_eitherCard# into your lap[_then:, and sneakily replace it with #randomAnyCard.a#]#_then#'
 - 'Tap emphatically on #_card2# while staring your opponent straight in the eyes'
-- Drop your cards on the table and give your opponent a puzzled smile
-- 'Imprint #_card2# on [_card3:Isochron Scepter,Spellbinder,Soul Foundry,Panoptic
-  Mirror,Mimic Vat]#_card3#'
+- 'Drop your cards on the table and give your opponent [_expression:a puzzled smile,a sultry grin,a bemused smirk,an exaggerated pout,a dramatic flourish,a firm handshake,a disapproving frown,a pitiful whimper,two big thumbs up,a signed photograph of yourself]#_expression#'
+- 'Imprint #_card2# on [_card3:Isochron Scepter,Spellbinder,Soul Foundry,Panoptic Mirror,Mimic Vat]#_card3#'
 - 'Suspend #_card1# with Jhoira of the Ghitu'
-- Tap exactly [_lands:one land,#count# lands]#_lands#
+- 'Tap exactly [_lands:one land,#count# lands,one #basicLands#,#count# #basicLands.s#]#_lands#'
 - 'Retrieve #_card2# from your sideboard with #wishCard#'
 - Flip the table
 - 'Play Three-Card Monte with #_card1#, #_card2#, and a morphed #randomCardAlone#'
-- 'Toss #_card2# into the air and shrug'
-- 'Explain to your opponent that #_card1# is strictly better than #randomCardAlone#'
+- 'Toss #_card2# into the air and [_then:shrug,grin like an idiot,glare menacingly,stare blankly,wink knowlingly]#_then#'
+- 'Explain to your opponent that #_card1# [_what:is strictly better than #randomCardAlone#,is strictly worse than #randomCardAlone#,was the playtest version of #randomCardAlone#,was actually designed by #anyPersonality#,is the new #randomCardAlone#]#_what#'
 - 'Reveal #hiddenAgendaCard# naming #_card2#'
-- 'Offer to sell #_card1# to your opponent for #priceUSD#'
+- 'Offer to sell #_card1# to your opponent for [_price:#priceUSD#,#priceUSD#,a kiss,a song and dance,a sack of #pluralNounOrMassNoun#]#_price#'
+- 'Point to #_card2# and tell your opponent [_guy:guy,gal,fella,dame,dude,jerk,joker,nerd,twit,clown]“save #typeOfCard.a# to deal with this #_guy#.”'
+- "Stick #_card2# into your mouth and [_then:let it hang out like a tongue,swallow it whole,spit it back onto the table,wait for it to get soggy,try to read it with your tongue]#_then#"
+- "Fashion [_headgear:crown,hat,elaborate headdress,sombrero,helmet]#_headgear.a# from copies #_card2# and place it on [_whose:your,your opponent's,a judge's]#_whose# head"
+- "Scoop a handful of #massNoun# out of your pocket and [_then:drop it theatrically onto the table,cram it into your mouth,place it carefully on top of your head,offer it temptingly to your opponent,smear it on your face,pretend it's whispering secrets to you,smear it all over your face]#_then#"
+- "[_make:Pretend to make,Make]#_make# #_card1# and #_card2# “kiss each other”"
+- "Tell your opponent that you lost to #anyPersonality# last round"
+- "[_verb:Insist,Explain,Announce]#_verb# that you're currently [_doingProject:filming a documentary about,writing a book about,conducting a social experiment with]#_doingProject# #_eitherCard#"
+- "[_perform:Perform,Stage,Put on]#_perform# a short “puppet show” with #_card1# and #_card2#"
+
+typeOfCard: 
+- "#cardCategory#"
+- "#cardCategoryTerm#"
+- "#randomAnyCard#"
+
+anyPersonality:
+- "#historicalFigure#"
+- "#character#"
+- "#person#"
+
 inGraphicsCardMask: "./data/images/cardmask-double.png"
 inGraphicsBacksplash:
 - "./data/images/backsplash_a.png"
