--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -182,7 +182,8 @@
     "The DCI[#neutralPronouns#]",
     "The Future Future League[#neutralPronouns#]",
     "The Magic Digital Team[#neutralPronouns#]",
-    "The #recentCardSet# Design Team[#neutralPronouns#]"
+    "The #recentCardSet# Design Team[#neutralPronouns#]",
+    "The Play Design Team[#neutralPronouns#]"
   ],
 
   "officialEntity": [
