--- a/src/data/grammar/mtg/gameplay/mtg-formats.yaml
+++ b/src/data/grammar/mtg/gameplay/mtg-formats.yaml
@@ -13,6 +13,7 @@
       "Type 4",
       "Two-Headed Giant",
       "Kitchen Table Magic",
+      "Team Unified #constuctedFormat#",
       "#alternativeConstructedFormat#",
       "#alternativeDraftFormat#"
   ],
