--- a/src/data/grammar/mtg/mtg-vocab.yaml
+++ b/src/data/grammar/mtg/mtg-vocab.yaml
@@ -8,6 +8,6 @@ creatureTypeOrCharacterClass:
 
 mtgThing:
 - "#deckArchOrCategory#"
-- "#randomAnyCard#"
+- "#randomCardAlone#"
 - "#format#"
 - "#cardCategory.s#"
