--- a/src/data/grammar/headlines/mtg-strategy-headline.yaml
+++ b/src/data/grammar/headlines/mtg-strategy-headline.yaml
@@ -1,8 +1,8 @@
 strategyRealization:
-- "#pros.capitalize# [_realization:don't realize,don't realize,don't realize,are discovering,are learning,don't acknowledge,are slowly learning,are now realizing,are finding,finally acknowledge][_tech:#techWithVerb#][_is:#_isVerb#]#_realization# that [_modifier:can't,won't,will never,will always,#_is# the best way to,can no longer][_effectivePhrase:more effective than,better than,secretly better than,way worse than,even better than][_finding:#techSingular# #verbDefeat.s# #obstacle#,#techPlural# #verbDefeat# #obstacle#,#_tech# #_modifier# #verbDefeat# #obstacle#,#_tech# #_is# the secret to #verbDefeating# #obstacle#,#_is# #_effectivePhrase# #techWithVerb#]#_finding#"
+- "#pros.capitalize# [_realization:don't realize,don't realize,don't realize,are discovering,are learning,don't acknowledge,are slowly learning,are now realizing,are finding,finally acknowledge][_tech:#techWithVerb#][_is:#_isVerb#]#_realization# that [_modifier:can't,won't,will never,will always,#_is# the best way to,can no longer][_effectivePhrase:more effective than,better than,strictly better than,secretly better than,way worse than,even better than][_finding:#techSingular# #verbDefeat.firstS# #obstacle#,#techPlural# #verbDefeat# #obstacle#,#_tech# #_modifier# #verbDefeat# #obstacle#,#_tech# #_is# the secret to #verbDefeating# #obstacle#,#_tech# #_is# #_effectivePhrase# #techWithVerb#]#_finding#"
 - "The Importance of [_thing:#randomAnyCard#,#techCardCategory#,#creatureTypes.s#,#gameConcept#]#_thing.capitalizeAll# in [_where:#format#,#recentCardSet#]#_where#"
 - "The [_secret:secret,trick,solution]#_secret# to #improvementGoal# is #deckChange#"
-- "#pro# Video Series: How I would [_change:improve,fix]#_change# [_improvable:Magic#colon# the Gathering,Magic Online,#format#,competitive Magic,#tournamentType# attendance]#_improvable# by #mtgOpinionSuggestion# #mtgThing#[_tirade:tirade,diatribe,rant][_adjTirade:angry,lengthy,crazed,methodical,deranged,honest][_play:play,comedy,musical,farce][_performance:musical appeal,rap odyssey,#_play# in #count# acts][_speechType:#_adjTirade# #_tirade#,rigorous examination,thought experiment,#_performance#][_subtitle:,#comma# Part #num2-9#,#comma# Part #num2-9#,#comma# #_speechType.a#]#_subtitle#"
+- "#pro# Video Series: How I would [_change:improve,fix]#_change# [_improvable:Magic#colon# the Gathering,Magic Online,#format#,competitive Magic,#tournamentType# attendance]#_improvable# by #mtgOpinionSuggestion# #mtgThing#[_tirade:tirade,diatribe,rant][_adjTirade:angry,lengthy,crazed,deranged,brutally honest][_play:play,comedy,musical,farce][_performance:musical essay,rap odyssey,#_play# in #count# acts][_speechType:#_adjTirade# #_tirade#,rigorous examination,thought experiment,thorough analysis,#_performance#][_subtitle:,#comma# Part #num2-9#,#comma# Part #num2-9#,#comma# #_speechType.a#]#_subtitle#"
 - "Preview of #teaserCardSet#[_format:, #normalFormat#,in #normalFormat#]: Will [_deck:#deck#,#deckArch#,the new #deckVariation# deck]#_deck# be #deckDescription#?"
 
 playGuide:
@@ -146,12 +146,12 @@ deckChange:
 - 'sideboarding #randomAnyCard#'
 - '[_removing:removing,cutting,not playing]#_removing# [_what:#randomAnyCard#,#techCardCategory#]#_what#'
 - 'playing [_change:more,fewer]#_change# #techCardCategory#'
-- 'playing around [_what:#randomAnyCard#,#techCardCategory#]'
+- 'playing around [_what:#randomAnyCard#,#techCardCategory#]#_what#'
 - 'including #cardCopyCount# copies of #randomAnyCard#'
 - 'cutting #randomCardAlone# for #randomAnyCard#'
 - 'using all foils'
 - 'using only misprint cards'
-- 'using [_only:only,nothing but ]#_only##cardQuality# cards'
+- 'using [_only:only ,nothing but ]#_only##cardQuality# cards'
 
 deckLocation:
 - maindeck
@@ -191,7 +191,6 @@ techSingular:
 - "learning to beat #deckArch#"
 - "understanding #deckArch# matchups"
 - "understanding #techCardCategory#"
-- "#techCardCategory#"
 - "playtesting #format#"
 - "playing #num2-99# hours of #format# every week"
 - "solving the #format# metagame"
@@ -200,7 +199,6 @@ techSingular:
 - good sideboarding
 - bad sideboarding
 - good card evaluation skills
-- "#nounActivity#"
 - practicing your shuffling technique
 - mana weaving
 - pile shuffling
@@ -208,6 +206,7 @@ techSingular:
 - "always calling [_face:heads,tails]#_face#"
 - "#mtgQuestionablePractice#"
 - "always playing #randomRealCard#"
+- "#nounActivity#"
 
 techPlural:
 - rotating formats
