More InGraphics variations (#198)
* more inGraphics variations; card search categories; more flavor text

* more strategy headline options

* small fixes

--- a/src/data/grammar/headlines/components/terminating-wordlists.yaml
+++ b/src/data/grammar/headlines/components/terminating-wordlists.yaml
@@ -6,7 +6,7 @@
   "tournamentWonWord": [
     "won", "clinched", "taken down", "dominated", "swept"
   ],
-  "mtgOpinionSuggestion": ["banning", "improving", "reconsidering", "nerfing", "bolstering", "strengthening", "weakening", "questioning", "ignoring", "disregarding", "doubling-down on", "reevaluating", "reconceptualizing"],
+  "mtgOpinionSuggestion": ["banning", "improving", "reconsidering", "nerfing", "bolstering", "strengthening", "weakening", "questioning", "ignoring", "disregarding", "doubling down on", "reevaluating", "reconceptualizing", "reexamining", "popularizing", "endorsing", "promoting", "talking about"],
   "descriptor": [
       "more powerful",
       "better",
