--- a/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
@@ -12,6 +12,10 @@ cardQueryInstantOrSorcery:
 - >
   [_customQuery:t=instant t|=sorcery#_colorTerm#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
+cardQueryCounterspell:
+- >
+  [_customQuery:t=instant text="counter target spell"][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
+
 cardQueryLand:
 - >
   [_customQuery:t=land#_colorTerm#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
@@ -39,6 +43,14 @@ cardQueryCardDraw:
 cardQueryTutor:
 - >
   [_customQuery:name=tutor,t=instant t|=sorcery text="search your library for a card"#_colorTerm#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
+
+cardQueryFlyingFinisher:
+- >
+  [_customQuery:t=creature text=flying pow=>4#_colorTerm#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
+
+randomFlyingFinisherCard:
+- >
+  [#cardQueryFlyingFinisher#]#_cardName#
 
 # expects _searchString to be defined
 cardQueryPermanentWithSearch:
@@ -71,6 +83,10 @@ randomCreatureCard:
 randomInstantOrSorceryCard:
 - >
   [#cardQueryInstantOrSorcery#]#_cardName#
+
+randomCounterspellCard:
+- >
+  [#cardQueryCounterspell#]#_cardName#
 
 randomLandCard:
 - >
@@ -106,55 +122,3 @@ randomPermanentWithText:
 randomCreatureWithText:
 - >
   [_card:#cardQueryPermanentWithText#]#_cardName#
-
-  
-###### color filters ######
-_colorTerm: ""
-color_W: "[_colorTerm: color=w]"
-color_U: "[_colorTerm: color=u]"
-color_B: "[_colorTerm: color=b]"
-color_R: "[_colorTerm: color=r]"
-color_G: "[_colorTerm: color=g]"
-
-color_WU: "[_colorTerm: color=wu]"
-color_UB: "[_colorTerm: color=ub]"
-color_BR: "[_colorTerm: color=br]"
-color_RG: "[_colorTerm: color=rg]"
-color_GW: "[_colorTerm: color=gw]"
-color_WB: "[_colorTerm: color=wb]"
-color_UR: "[_colorTerm: color=ur]"
-color_BG: "[_colorTerm: color=bg]"
-color_RW: "[_colorTerm: color=rw]"
-color_UG: "[_colorTerm: color=ug]"
-color_UW: "#color_WU#"
-color_BU: "#color_UB#"
-color_RB: "#color_BR#"
-color_GR: "#color_RG#"
-color_WG: "#color_GW#"
-color_BW: "#color_WB#"
-color_RU: "#color_UR#"
-color_GB: "#color_BG#"
-color_WR: "#color_RW#"
-color_GU: "#color_UG#"
-
-color_WUB: "[_colorTerm: color=wu]"
-color_UBR: "[_colorTerm: color=ub]"
-color_BRG: "[_colorTerm: color=br]"
-color_RGW: "[_colorTerm: color=rg]"
-color_GWU: "[_colorTerm: color=gw]"
-color_WBR: "[_colorTerm: color=wb]"
-color_URG: "[_colorTerm: color=ur]"
-color_BGW: "[_colorTerm: color=bg]"
-color_RWU: "[_colorTerm: color=rw]"
-color_GUB: "[_colorTerm: color=ug]"
-color_RUG: "#color_URG#"
-color_BUG: "#color_GUB#"
-
-color_WUBRG: "[_colorTerm: color=wubrg]"
-
-color_4color:
-- "wubr"
-- "ubrg"
-- "brgw"
-- "rgwu"
-- "gwub"
